Fixed report load issue on firefox

--- a/src/app/pages/reports/components/report-management/reports.component.scss
+++ b/src/app/pages/reports/components/report-management/reports.component.scss
@@ -31,7 +31,7 @@
 }
 .head-button-container {
     position: absolute;
-    right: 49px;
+    right: 15px;
     top: -13px;
   }
    .no-margin{
